--- a/learnJS.html
+++ b/learnJS.html
@@ -2,13 +2,17 @@
     <head>
         <link rel="stylesheet" type="text/css" href=style.css>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+        <script src="https://www.jqueryscript.net/demo/jQuery-Plugin-To-Connect-Two-Html-Elements-with-A-Line/required/script/jquery.svg.min.js"></script>
+        <script src="https://www.jqueryscript.net/demo/jQuery-Plugin-To-Connect-Two-Html-Elements-with-A-Line/required/script/jquery.connectingLine.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     </head>
     <body>
         <div class="content">
             <div class="buttons">
                 <input class="control-button" type="button" value="addRezist" onclick="addRezist();" >
                 <input class="control-button" type="button" value="addEarth" onclick="addEarth();" >
-                <input class="control-button" type="button" value="addVoltage" onclick="addVoltage();" >
+                <input class="control-button" type="button" value="addVoltage" onclick="addVoltage();" >    
                 <input class="control-button" type="button" value="remove" onclick="removeElement();">
             </div>
             <div id="parent" class="panel">
@@ -24,6 +28,6 @@
 
 
         <script src="./main.js"></script>
-        
+    
     </body>
 </html>
