--- a/learnJS.html
+++ b/learnJS.html
@@ -15,6 +15,8 @@
                 <input class="control-button" type="button" value="addVoltage" onclick="addVoltage();" >    
                 <input class="control-button" type="button" value="remove" onclick="removeElement();">
             </div>
+            <!--<div class="node1">Drag Me</div>
+            <div class="node2">Drag Me</div> -->
             <div id="parent" class="panel">
                 <ul id="contextMenu">
                     <li class="menuItems" onclick="removeElement();">Delete</li>
