--- a/learnJS.html
+++ b/learnJS.html
@@ -31,7 +31,7 @@
 </div>
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
+        <script src="./vis.min.js"></script>
         <script src="./main.js"></script>
     </body>
 </html>
